<resources>
    <string name="app_name">Achacha</string>

    <!-- note. main focus -->
    <string name="colon">:</string>
    <string name="timer_init">00</string>
    <string name="greeting_at_001">Would you like a cup of coffee?</string>
    <string name="greeting_at_002">Could I please get some orange juice?</string>
    <string name="greeting_at_003">I’m still tired from the night before.</string>
    <string name="greeting_at_004">Hello.</string>
    <string name="greeting_at_005">Long time no see.</string>
    <string name="greeting_at_006">Hey, how have you been? I haven’t seen you in a long time.</string>
    <string name="greeting_at_007">Hey, long time no see! How have you been?</string>
    <string name="greeting_at_008">How are you?</string>
    <string name="greeting_at_009">How’s it going?</string>
    <string name="greeting_at_010">What’s up?</string>

    <string name="main_focus">Main Focus</string>
    <string name="focus_contents_title">TODAY</string>
    <string name="question_main">What is your main focus for today?</string>

    <string name="phrase_001">Do more of what makes you happy.</string>

    <!-- note. kind -->
    <string name="todo_value_is_not_exist">해야 할 일을 입력해주세요.</string>

    <!-- note. kind -->
    <string name="today">Today</string>
    <string name="btn_todo_create">Create</string>
    <string name="kind_new_list">+ New List</string>

    <string name="set_username_question">Hello, what\'s your name?</string>
    <string name="guide_blank_title">Add a todo to get started.</string>
    <string name="guide_blank_subtitle">Switch to </string>

    <!-- note. widget button -->
    <string name="button_confirm">확인</string>
    <string name="button_cancel">취소</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- note. drawer menu -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_service_information">서비즈 준비 중입니다.</string>


</resources>